--- a/ListTugasDanDeadline/src/main/java/ProgramUtama.form
+++ b/ListTugasDanDeadline/src/main/java/ProgramUtama.form
@@ -196,7 +196,7 @@
     <Component class="javax.swing.JComboBox" name="semester">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="9">
+          <StringArray count="11">
             <StringItem index="0" value="Pilih Semester..."/>
             <StringItem index="1" value="1"/>
             <StringItem index="2" value="2"/>
@@ -206,6 +206,8 @@
             <StringItem index="6" value="6"/>
             <StringItem index="7" value="7"/>
             <StringItem index="8" value="8"/>
+            <StringItem index="9" value="Matkul Pilihan Genap"/>
+            <StringItem index="10" value="Matkul Pilihan Ganjil"/>
           </StringArray>
         </Property>
       </Properties>
